Bug 1543350 - don't shut-down taskqueue early. r=jya,mjf a=pascalc

Shutting down the taskqueue early prevents the decoder's tasks to be queued.

A TaskQueue no longer requires to be explicitly shutdown it will shutdown when ref counter drops to zero.

Differential Revision: https://phabricator.services.mozilla.com/D26929